post-api-gateway-service/k8s/post-api-gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-api-gateway-deploy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: post-api-gateway-service-app
  template:
    metadata:
      labels:
        app: post-api-gateway-service-app
    spec:
      containers:
        - name: post-api-gateway-img
          image: explorejava/post-api-gateway-service:latest
          ports:
            - containerPort: 8060
      restartPolicy: Always # Equivalent to 'unless-stopped'

---
apiVersion: v1
kind: Service
metadata:
  name: post-api-gateway-service  # this service name will be used in ingress rule "my-ingress.yaml"
spec:
  type: ClusterIP
  selector:
    app: post-api-gateway-service-app
  ports:
    - protocol: TCP
      port: 8060
      targetPort: 8060
