post-api-gateway-service/k8s/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-post-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: post-api-gateway-service  # service name is used in reactJS to access the api
                port:
                  number: 8060
